added 3new scrapping ipynb files

--- a/FrontEndDev Scraping.ipynb
+++ b/FrontEndDev Scraping.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "#url of page to be scrapped from indeed \n",
-    "url = 'https://www.indeed.com/jobs?q=Data+Scientist&l=Irvine%2C+CA&radius=100'\n",
+    "url = 'https://www.indeed.com/jobs?q=Front+End+Developer&l=Irvine%2C+CA&radius=100'\n",
     "browser.visit(url)"
    ]
   },
@@ -70,9 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#result to be Returned as an iterable list\n",
@@ -223,9 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#convert newliat to pandas dataframe\n",
@@ -236,9 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "New_job_location_df = pd.DataFrame(new_list, columns=['Job_Title', 'Location'])\n",
@@ -252,18 +246,7 @@
    "outputs": [],
    "source": [
     "#db = client.police_shootings_db\n",
-    "client.Indeed_db.data_jobs.insert_many(New_job_location_df.to_dict('records'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#query database\n",
-    "# Data_jobs = db.data_job.find()\n",
-    "# print(Data_jobs)"
+    "client.Indeed_db.FrontEnd_jobs.insert_many(New_job_location_df.to_dict('records'))"
    ]
   },
   {
