--- a/SoftwareEng Scraping.ipynb
+++ b/SoftwareEng Scraping.ipynb
@@ -40,8 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#url of page to be scrapped from indeed \n",
-    "url = 'https://www.indeed.com/jobs?q=Data+Scientist&l=Irvine%2C+CA&radius=100'\n",
+    "url = 'https://www.indeed.com/jobs?q=Software+Engineer&l=Irvine%2C+CA&radius=100'\n",
     "browser.visit(url)"
    ]
   },
@@ -70,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#result to be Returned as an iterable list\n",
@@ -95,7 +92,7 @@
     "# more_jobs.first.click()\n",
     "\n",
     "# no_thanks = browser.find_by_xpath('/html/body/div[3]/div[2]/div[4]/div[3]/div[2]/a')\n",
-    "# no_thanks.first.click()\n"
+    "# no_thanks.first.click()"
    ]
   },
   {
@@ -124,6 +121,7 @@
    "outputs": [],
    "source": [
     "#clean_job_titles = job_titles.strip\n",
+    "\n",
     "clean_job_titles = []\n",
     "\n",
     "for job in job_titles[1:]:\n",
@@ -223,9 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#convert newliat to pandas dataframe\n",
@@ -236,9 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "New_job_location_df = pd.DataFrame(new_list, columns=['Job_Title', 'Location'])\n",
@@ -252,7 +246,7 @@
    "outputs": [],
    "source": [
     "#db = client.police_shootings_db\n",
-    "client.Indeed_db.data_jobs.insert_many(New_job_location_df.to_dict('records'))"
+    "client.Indeed_db.software_jobs.insert_many(New_job_location_df.to_dict('records'))"
    ]
   },
   {
@@ -262,7 +256,7 @@
    "outputs": [],
    "source": [
     "#query database\n",
-    "# Data_jobs = db.data_job.find()\n",
+    "# Data_jobs = db.software_job.find()\n",
     "# print(Data_jobs)"
    ]
   },
