--- a/Data_Scraping.ipynb
+++ b/Data_Scraping.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import Dependencies\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
@@ -40,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://www.indeed.com/jobs?q=Software+Engineer&l=Irvine%2C+CA&radius=100'\n",
+    "#url of page to be scrapped from indeed \n",
+    "url = 'https://www.indeed.com/jobs?q=Data+Scientist&l=Irvine%2C+CA&radius=100'\n",
     "browser.visit(url)"
    ]
   },
@@ -61,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#result to return the job title\n",
     "titles = soup.find_all(\"h2\", class_ = \"title\")\n",
     "print(titles)\n",
     "#title[1].get_text()"
@@ -69,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#result to be Returned as an iterable list\n",
@@ -85,14 +90,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dismiss = browser.find_by_xpath('/html/body/div[2]/div/section/div/div[2]')\n",
-    "# dismiss.first.click()\n",
     "\n",
-    "# more_jobs = browser.find_by_xpath('/html/body/table[2]/tbody/tr/td/table/tbody/tr/td[1]/nav/div/ul/li[6]/a/span')\n",
-    "# more_jobs.first.click()\n",
-    "\n",
-    "# no_thanks = browser.find_by_xpath('/html/body/div[3]/div[2]/div[4]/div[3]/div[2]/a')\n",
-    "# no_thanks.first.click()"
+    "try:\n",
+    "    dismiss = browser.find_by_xpath('/html/body/div[2]/div/section/div/div[2]')\n",
+    "    more_jobs = browser.find_by_xpath('/html/body/table[2]/tbody/tr/td/table/tbody/tr/td[1]/nav/div/ul/li[6]/a/span')\n",
+    "    no_thanks = browser.find_by_xpath('/html/body/div[3]/div[2]/div[4]/div[3]/div[2]/a')\n",
+    "    dismiss.first.click()\n",
+    "    more_jobs.first.click()\n",
+    "    no_thanks.first.click()\n",
+    "except:\n",
+    "    print(\"not found\")\n"
    ]
   },
   {
@@ -104,14 +111,14 @@
     "#Empty list to append the the result and index 0 is an int \n",
     "job_titles = [0]\n",
     " \n",
+    " #loop through the result    \n",
     "for x in range(1, 2):\n",
     "    titles = soup.find_all(\"h2\", class_ = \"title\")\n",
     "    for title in titles:\n",
     "        job_titles.append(title.text)\n",
     "        print('page:', x, '-------------')\n",
     "        print(title.text)\n",
-    "        browser.find_by_xpath('/html/body/table[2]/tbody/tr/td/table/tbody/tr/td[1]/nav/div/ul/li[6]/a/span/span')\n",
-    "\n"
+    "        browser.find_by_xpath('/html/body/table[2]/tbody/tr/td/table/tbody/tr/td[1]/nav/div/ul/li[6]/a/span/span')"
    ]
   },
   {
@@ -120,10 +127,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#clean_job_titles = job_titles.strip\n",
-    "\n",
+    "#Use replace to print out a clean job title\n",
     "clean_job_titles = []\n",
     "\n",
+    "#loop through result\n",
     "for job in job_titles[1:]:\n",
     "    clean_job_title = job.replace('\\n', '')\n",
     "    clean_job_titles.append(clean_job_title)"
@@ -135,6 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#print clean job titles to check\n",
     "print(clean_job_titles)"
    ]
   },
@@ -144,8 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#result to return the job locations\n",
     "locations = soup.find_all(\"span\", class_ = \"location accessible-contrast-color-location\")\n",
-    "#locations"
+    "locations"
    ]
   },
   {
@@ -154,8 +163,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Empty list to append the result\n",
     "job_locations = []\n",
     "\n",
+    "\n",
+    "#loop through the returned result\n",
     "for x in range(1, 2):\n",
     "    locations = soup.find_all(\"span\", class_ = \"location accessible-contrast-color-location\")\n",
     "    for location in locations:\n",
@@ -172,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#print job locations\n",
     "print(job_locations)"
    ]
   },
@@ -181,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#zip both into a list\n",
+    "#zip both result into a list\n",
     "new_list = list(zip(clean_job_titles, job_locations))"
    ]
   },
@@ -201,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#put list into a python dictionary\n",
+    "#append list into a python dictionary\n",
     "updated_list = dict(new_list)\n",
     "updated_list"
    ]
@@ -212,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#transfer to MongoDB\n",
+    "#Initialize pymongo to work with MongoDBs\n",
     "#CONNECT MONGO DB\n",
     "conn = 'mongodb://localhost:27017'\n",
     "client = pymongo.MongoClient(conn)"
@@ -221,10 +234,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "#convert newliat to pandas dataframe\n",
+    "#convert newlist to pandas dataframe\n",
     "updated_list_df = pd.DataFrame(new_list)\n",
     "updated_list_df"
    ]
@@ -232,9 +247,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "#append colums keys\n",
     "New_job_location_df = pd.DataFrame(new_list, columns=['Job_Title', 'Location'])\n",
     "New_job_location_df"
    ]
@@ -245,8 +263,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#db = client.police_shootings_db\n",
-    "client.Indeed_db.software_jobs.insert_many(New_job_location_df.to_dict('records'))"
+    "#Define database and collection\n",
+    "#Database = Indeed_db\n",
+    "#Collections = Data_jobs\n",
+    "client.Indeed_db.Data_jobs.insert_many(New_job_location_df.to_dict('records'))"
    ]
   },
   {
@@ -255,9 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#query database\n",
-    "# Data_jobs = db.software_job.find()\n",
-    "# print(Data_jobs)"
+    "#Done"
    ]
   },
   {
