--- a/FrontEndDev_Scraping.ipynb
+++ b/FrontEndDev_Scraping.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import Dependencies\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
@@ -62,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#result to return the job title\n",
     "titles = soup.find_all(\"h2\", class_ = \"title\")\n",
     "print(titles)\n",
     "#title[1].get_text()"
@@ -86,14 +88,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dismiss = browser.find_by_xpath('/html/body/div[2]/div/section/div/div[2]')\n",
-    "# dismiss.first.click()\n",
     "\n",
-    "# more_jobs = browser.find_by_xpath('/html/body/table[2]/tbody/tr/td/table/tbody/tr/td[1]/nav/div/ul/li[6]/a/span')\n",
-    "# more_jobs.first.click()\n",
-    "\n",
-    "# no_thanks = browser.find_by_xpath('/html/body/div[3]/div[2]/div[4]/div[3]/div[2]/a')\n",
-    "# no_thanks.first.click()\n"
+    "try:\n",
+    "    dismiss = browser.find_by_xpath('/html/body/div[2]/div/section/div/div[2]')\n",
+    "    more_jobs = browser.find_by_xpath('/html/body/table[2]/tbody/tr/td/table/tbody/tr/td[1]/nav/div/ul/li[6]/a/span')\n",
+    "    no_thanks = browser.find_by_xpath('/html/body/div[3]/div[2]/div[4]/div[3]/div[2]/a')\n",
+    "    dismiss.first.click()\n",
+    "    more_jobs.first.click()\n",
+    "    no_thanks.first.click()\n",
+    "except:\n",
+    "    print(\"not found\")\n"
    ]
   },
   {
@@ -104,7 +108,8 @@
    "source": [
     "#Empty list to append the the result and index 0 is an int \n",
     "job_titles = [0]\n",
-    " \n",
+    "\n",
+    " #loop through the result\n",
     "for x in range(1, 2):\n",
     "    titles = soup.find_all(\"h2\", class_ = \"title\")\n",
     "    for title in titles:\n",
@@ -121,9 +126,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#clean_job_titles = job_titles.strip\n",
+    "#Use replace to print out a clean job title\n",
     "clean_job_titles = []\n",
     "\n",
+    "#loop through result\n",
     "for job in job_titles[1:]:\n",
     "    clean_job_title = job.replace('\\n', '')\n",
     "    clean_job_titles.append(clean_job_title)"
@@ -135,6 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#print clean job titles to check\n",
     "print(clean_job_titles)"
    ]
   },
@@ -144,8 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#result to return the job locations\n",
     "locations = soup.find_all(\"span\", class_ = \"location accessible-contrast-color-location\")\n",
-    "#locations"
+    "locations"
    ]
   },
   {
@@ -154,8 +162,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Empty list to append the result\n",
     "job_locations = []\n",
     "\n",
+    "#loop through the returned result\n",
     "for x in range(1, 2):\n",
     "    locations = soup.find_all(\"span\", class_ = \"location accessible-contrast-color-location\")\n",
     "    for location in locations:\n",
@@ -172,6 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#print job locations\n",
     "print(job_locations)"
    ]
   },
@@ -181,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#zip both into a list\n",
+    "#zip both result into a list\n",
     "new_list = list(zip(clean_job_titles, job_locations))"
    ]
   },
@@ -201,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#put list into a python dictionary\n",
+    "#append list into a python dictionary\n",
     "updated_list = dict(new_list)\n",
     "updated_list"
    ]
@@ -212,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#transfer to MongoDB\n",
+    "#Initialize pymongo to work with MongoDBs\n",
     "#CONNECT MONGO DB\n",
     "conn = 'mongodb://localhost:27017'\n",
     "client = pymongo.MongoClient(conn)"
@@ -224,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#convert newliat to pandas dataframe\n",
+    "#convert newlist to pandas dataframe\n",
     "updated_list_df = pd.DataFrame(new_list)\n",
     "updated_list_df"
    ]
@@ -235,6 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#append colums keys\n",
     "New_job_location_df = pd.DataFrame(new_list, columns=['Job_Title', 'Location'])\n",
     "New_job_location_df"
    ]
@@ -245,7 +257,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#db = client.police_shootings_db\n",
+    "#Define database and collection\n",
+    "#Database = Indeed_db\n",
+    "#Collections = FrontEnd_jobs\n",
     "client.Indeed_db.FrontEnd_jobs.insert_many(New_job_location_df.to_dict('records'))"
    ]
   },
@@ -254,7 +268,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Done"
+   ]
   }
  ],
  "metadata": {
